# webui-example

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: api.rs  data_operation.rs  data_store.rs  main.rs  repositories.rs
src/api/: meta_data.rs
web-frontend/: README.md  angular.json  package-lock.json  package.json
web-frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
web-frontend/src/app/common/api/: data-operation.service.ts  data-store.service.ts  meta-data.service.ts
web-frontend/src/app/common/const/: path.ts
web-frontend/src/app/common/model/: category.ts  classification.ts  field.ts  process.ts  state.ts  workitems.ts  workitemtypes.ts
web-frontend/src/app/contents/categories/: categories.component.html  categories.component.scss  categories.component.ts
web-frontend/src/app/contents/classification/: classification.component.html  classification.component.ts
web-frontend/src/app/contents/fields/: fields.component.html  fields.component.scss  fields.component.ts
web-frontend/src/app/contents/home/: home.component.ts
web-frontend/src/app/contents/states/: states.component.html  states.component.ts
web-frontend/src/app/contents/work-items/: work-items.component.html  work-items.component.scss  work-items.component.ts
