[package]
name = "webui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.1"
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
azure-devops-rust-lib = { path = "./../azure-devops-rust-lib"}
toml = "0.8.8"
chrono = "0.4.31"
